--- a/files/index.html
+++ b/files/index.html
@@ -7,6 +7,7 @@
   <title>Title</title>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-cookies.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous">
@@ -49,8 +50,7 @@
   <div id="game" oncontextmenu="return false;">
 
   </div>
-  <script src="files/game-bundle.js" charset="utf-8"></script>
-  <script src="files/app-bundle.js" charset="utf-8"></script>
+  <script src="files/bundle.js" charset="utf-8"></script>
 </body>
 
 </html>
