--- a/files/index.html
+++ b/files/index.html
@@ -11,7 +11,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous">
-  <link rel="stylesheet" href="files/styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body ng-app="app" ng-controller="mainController">
@@ -50,7 +50,7 @@
   <div id="game" oncontextmenu="return false;">
 
   </div>
-  <script src="files/bundle.js" charset="utf-8"></script>
+  <script src="bundle.js" charset="utf-8"></script>
 </body>
 
 </html>
